Add CpuTemperatureService and CpuTemperature razor page.

--- a/Cloudberry.csproj
+++ b/Cloudberry.csproj
@@ -5,4 +5,9 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="0.1.0-prerelease.19376.1" />
+    <PackageReference Include="System.Device.Gpio" Version="0.1.0-prerelease.19376.1" />
+  </ItemGroup>
+
 </Project>
