--- a/Cloudberry.csproj
+++ b/Cloudberry.csproj
@@ -6,9 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazor.Extensions.Canvas" Version="0.2.0" />
-    <PackageReference Include="Iot.Device.Bindings" Version="0.1.0-prerelease.19376.1" />
-    <PackageReference Include="System.Device.Gpio" Version="0.1.0-prerelease.19376.1" />
+    <PackageReference Include="Blazor.Extensions.Canvas" Version="0.4.0" />
+    <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
+    <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\scripts\" />
   </ItemGroup>
 
 </Project>
