--- a/Cloudberry.csproj
+++ b/Cloudberry.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <nullable>enable</nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
     <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
+    <PackageReference Include="ChartJs.Blazor" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
