--- a/Cloudberry.csproj
+++ b/Cloudberry.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="ChartJs.Blazor" Version="2.0.0-preview1" />
     <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.8" />
     <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
   </ItemGroup>
 
