--- a/Cloudberry.csproj
+++ b/Cloudberry.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Iot.Device.Bindings" Version="1.5.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="6.0.0" />
     <PackageReference Include="System.Device.Gpio" Version="1.5.0" />
+    <PackageReference Include="WebSocketManager" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
